@@ -1,3 +1,4 @@
+	* add per-tracker scrape information to announce_entry
 	* report errors in read_piece_alert
 	* DHT memory optimization
 	* improve DHT lookup speed
